# manim-json

./: .gitignore  pyproject.toml
examples/: graph_example.json  graph_example.py  graph_example_layers.py  hello_world.json  hello_world.py  hello_world_layers.py
examples/web/: index.html  main.js  main.py  package-lock.json  package.json  style.css
manim_json/: __init__.py  json_camera.py  json_renderer.py  json_scene.py  manim_to_pixel.py  pixel_to_manim.py  render_json.py  render_single_layers.py  update_json.py
