[tool.poetry]
name = "manim-json"
version = "0.2.0"
description = ""
authors = ["MathItYT <benjamin.ubilla@uc.cl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
manim = "^0.18.1"

[tool.poetry.group.dev.dependencies]
flask = "^3.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
